syntax = "proto3";

package unicampus.api.admission.v1alpha1;

import "google/api/annotations.proto";

service AdmissionService {
  rpc ListSchools (stream School) returns (stream School) {
    option (google.api.http) = {
      get: "/v1/school"
    };
  }
  rpc ListSchoolsByQuery (Query) returns (stream School) {
    option (google.api.http) = {
      get: "/v1/school"
    };
  }
  rpc ListSchoolsByCritera (Critera) returns (stream School) {
    option (google.api.http) = {
      get: "/v1/school"
    };
  }
  rpc FindSchool (School) returns (School) {
    option (google.api.http) = {
      get: "/v1/school"
    };
  }
  rpc RegisterSchool (School) returns (School) {
    option (google.api.http) = {
      post: "/v1/school"
    };
  }
  rpc UnregisterSchool (School) returns (School) {
    option (google.api.http) = {
      delete: "/v1/school"
    };
  }
  rpc UpdateSchool (School) returns (School) {
    option (google.api.http) = {
      put: "/v1/school"
    };
  }

  rpc AppyStudentToSchool (Application) returns (Application) {
    option (google.api.http) = {
      post: "/v1/application"
    };
  }

  rpc FindStudent (Student) returns (Student) {
    option (google.api.http) = {
      get: "/v1/school"
    };
  }
  rpc RegisterStudent (Student) returns (Student) {
    option (google.api.http) = {
      post: "/v1/school"
    };
  }
  rpc UnregisterStudent (Student) returns (Student) {
    option (google.api.http) = {
      delete: "/v1/school"
    };
  }
  rpc UpdateStudent (Student) returns (Student) {
    option (google.api.http) = {
      put: "/v1/school"
    };
  }
}

message School {
  string UUID = 1;
  string name = 2;
  string description = 3;
}

message Student {
  string UUID = 1;
  string first_name = 2;
  string last_name = 3;
  string description = 4;
}

message Application {
  string UUID = 1;
  School school = 2;
  Student student = 3;
}

message Query {
  string query = 1;
}

message Critera {
  string sector = 1;
}

message Offset {
  uint64 first = 1;
  uint64 offset = 2;
}
