syntax = "proto3";

package unicampus.admission;

service AdmissionService {
  rpc ListSchools (stream School) returns (stream School) {}
  rpc ListSchoolsByQuery (Query) returns (stream School) {}
  rpc ListSchoolsByCritera (Critera) returns (stream School) {}
  rpc ListSchoolsByOffset (Offset) returns (stream School) {}
  rpc GetSchool (School) returns (School) {}
  rpc PutSchool (School) returns (School) {}
  rpc DeleteSchool (School) returns (School) {}

  // rpc ListStudents (stream Student) returns (stream Student) {}
  // rpc ListStudentsByQuery (Query) returns (stream Student) {}
  // rpc ListStudentsByCritera (Critera) returns (stream Student) {}
  // rpc ListStudentsByOffset (Offset) returns (stream Student) {}
  // rpc GetStudent (Student) returns (Student) {}
  // rpc PutStudent (Student) returns (Student) {}
  // rpc DeleteStudent (Student) returns (Student) {}
}

message School {
  string uuid = 1;
  string name = 2;
  string description = 3;
}

message Student {
  string uuid = 1;
  string fist_name = 2;
  string last_name = 3;
  string description = 4;
}

message Query {
  string query = 1;
}

message Critera {
  string sector = 1;
}

message Offset {
  uint64 first = 1;
  uint64 offset = 2;
}
